--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 #viljum ekki fylgjast með node_modules
 /node_modules
+#viljum ekki fylgjast með verkefna lýsingu það er niður hlaðið einusinni
+/VerkefnaLysingOGgogn
