--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 /node_modules
 #viljum ekki fylgjast með verkefna lýsingu það er niður hlaðið einusinni
 /VerkefnaLysingOGgogn
+#ætlum ekki bæta fleiri myndir þannig ætlum ekki fylgjast með möppuni
+/img
